<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Calculator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/curr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="40dp"
            android:gravity="right|center"
            android:layout_marginRight="10dp"/>
    </LinearLayout>


<!--  1, 2, 3, CA  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/keypad_one"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/keypad_one"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_margin="1dp"/>

        <TextView
            android:id="@+id/keypad_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/keypad_two"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_margin="1dp"/>

        <TextView
            android:id="@+id/keypad_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/keypad_three"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_margin="1dp"/>

        <TextView
            android:id="@+id/keypad_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/keypad_clear"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:background="@color/purple_200"
            android:layout_margin="1dp"/>
    </LinearLayout>

<!--  4, 5, 6, +  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/keypad_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/keypad_four"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_margin="1dp"/>

        <TextView
            android:id="@+id/keypad_five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/keypad_five"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_margin="1dp"/>

        <TextView
            android:id="@+id/keypad_six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/keypad_six"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_margin="1dp"/>

        <TextView
            android:id="@+id/keypad_plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/keypad_plus"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:background="@color/purple_200"
            android:layout_margin="1dp"/>
    </LinearLayout>

<!--  7, 8, 9, 0  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/keypad_seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/keypad_seven"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_margin="1dp"/>

        <TextView
            android:id="@+id/keypad_eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/keypad_eight"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_margin="1dp"/>

        <TextView
            android:id="@+id/keypad_nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/keypad_nine"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_margin="1dp"/>

        <TextView
            android:id="@+id/keypad_zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/keypad_zero"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_margin="1dp"/>
    </LinearLayout>


</LinearLayout>